--- a/1.profile-cell-lines/0.inspect-profiles.md
+++ b/1.profile-cell-lines/0.inspect-profiles.md
@@ -19,31 +19,33 @@ Load pilot data for testing (this will be swapped out for the real
 data)
 
 ``` r
-profiles <- read_csv("../../../backend/PILOT_1/BR00098071/BR00098071_normalized_variable_selected.csv", progress = FALSE)
+profiles <- read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt_normalized_variable_selected.csv", progress = FALSE)
 
 variables <- str_subset(names(profiles), "^Cells|^Nuclei|^Cytoplasm")
 ```
 
 ``` r
-profiles %<>% 
-  mutate(Metadata_line_ID = recode(Metadata_cell_line,
-                                   "A" = 1, "B" = 2, "C" = 3, "D" = 4, "E" = 5, "F" = 6)) %>%
-  rename(Metadata_plating_density = Metadata_seeding_density_level) %>%
-  select(Metadata_Plate, Metadata_Well, Metadata_line_ID, Metadata_plating_density, one_of(variables))
-  
+# profiles %<>% 
+#   mutate(Metadata_line_ID = recode(Metadata_cell_line,
+#                                    "A" = 1, "B" = 2, "C" = 3, "D" = 4, "E" = 5, "F" = 6)) %>%
+#   rename(Metadata_plating_density = Metadata_seeding_density_level) %>%
+#   select(Metadata_Plate, Metadata_Well, Metadata_line_ID, Metadata_plating_density, one_of(variables))
+#   
 
 profiles %>% select(matches("Metadata_")) %>% head()
 ```
 
-    ## # A tibble: 6 x 4
-    ##   Metadata_Plate Metadata_Well Metadata_line_ID Metadata_plating_density
-    ##   <chr>          <chr>                    <dbl>                    <dbl>
-    ## 1 BR00098071     A01                          1                        1
-    ## 2 BR00098071     A02                          1                        2
-    ## 3 BR00098071     A03                          1                        3
-    ## 4 BR00098071     A04                          1                        4
-    ## 5 BR00098071     A05                          2                        4
-    ## 6 BR00098071     A06                          2                        3
+    ## # A tibble: 6 x 7
+    ##   Metadata_Plate Metadata_Well Metadata_Assay_… Metadata_Plate_…
+    ##   <chr>          <chr>         <chr>            <chr>           
+    ## 1 cmqtlpl1.5-31… A01           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## 2 cmqtlpl1.5-31… A02           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## 3 cmqtlpl1.5-31… A03           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## 4 cmqtlpl1.5-31… A04           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## 5 cmqtlpl1.5-31… A05           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## 6 cmqtlpl1.5-31… A06           cmqtlpl1.5-31-2… cmQTL_plate1_5.…
+    ## # … with 3 more variables: Metadata_well_position <chr>,
+    ## #   Metadata_plating_density <dbl>, Metadata_line_ID <dbl>
 
 ### How many replicates?
 
@@ -60,24 +62,35 @@ metadata <- read_tsv("../../../metadata/2019_06_10_Batch3/platemap/cmQTL_plate1_
     ## )
 
 ``` r
+metadata %<>%
+  rename(
+  Metadata_Plate_Map_Name = plate_map_name,
+  Metadata_Well = well_position,
+  Metadata_plating_density = plating_density,
+  Metadata_line_ID = line_ID
+) %>%
+  mutate(
+    Metadata_Plate = "cmqtlpl1.5-31-2019-mt"
+  )
+
 metadata %>% 
-  group_by(line_ID) %>%
+  group_by(Metadata_line_ID) %>%
   tally()
 ```
 
     ## # A tibble: 48 x 2
-    ##    line_ID     n
-    ##      <dbl> <int>
-    ##  1       1     8
-    ##  2       2     8
-    ##  3       3     8
-    ##  4       4     8
-    ##  5       5     8
-    ##  6       6     8
-    ##  7       7     8
-    ##  8       8     8
-    ##  9       9     8
-    ## 10      10     8
+    ##    Metadata_line_ID     n
+    ##               <dbl> <int>
+    ##  1                1     8
+    ##  2                2     8
+    ##  3                3     8
+    ##  4                4     8
+    ##  5                5     8
+    ##  6                6     8
+    ##  7                7     8
+    ##  8                8     8
+    ##  9                9     8
+    ## 10               10     8
     ## # … with 38 more rows
 
 ``` r
@@ -86,24 +99,27 @@ profiles %>%
   tally()
 ```
 
-    ## # A tibble: 6 x 3
+    ## # A tibble: 48 x 3
     ## # Groups:   Metadata_Plate [?]
-    ##   Metadata_Plate Metadata_line_ID     n
-    ##   <chr>                     <dbl> <int>
-    ## 1 BR00098071                    1    64
-    ## 2 BR00098071                    2    64
-    ## 3 BR00098071                    3    64
-    ## 4 BR00098071                    4    64
-    ## 5 BR00098071                    5    64
-    ## 6 BR00098071                    6    64
+    ##    Metadata_Plate        Metadata_line_ID     n
+    ##    <chr>                            <dbl> <int>
+    ##  1 cmqtlpl1.5-31-2019-mt                1     8
+    ##  2 cmqtlpl1.5-31-2019-mt                2     8
+    ##  3 cmqtlpl1.5-31-2019-mt                3     8
+    ##  4 cmqtlpl1.5-31-2019-mt                4     8
+    ##  5 cmqtlpl1.5-31-2019-mt                5     8
+    ##  6 cmqtlpl1.5-31-2019-mt                6     8
+    ##  7 cmqtlpl1.5-31-2019-mt                7     8
+    ##  8 cmqtlpl1.5-31-2019-mt                8     8
+    ##  9 cmqtlpl1.5-31-2019-mt                9     8
+    ## 10 cmqtlpl1.5-31-2019-mt               10     8
+    ## # … with 38 more rows
 
 ## Is cell plating density correlated with the order of plating a cell line?
 
 ### Display platemap
 
 ``` r
-profiles0 <- profiles %>% filter(Metadata_Plate == "BR00098071")
-
 p <- 
   platetools::raw_map(data =
                       as.character(profiles$Metadata_line_ID),
@@ -127,19 +143,29 @@ ggsave(out_file, p, height = 4, width = 6)
 ### Plot cell counts on plate map
 
 ``` r
-db <- src_sqlite(path = "../../../backend/PILOT_1/BR00098071/BR00098071.sqlite")
+# Generate cell counts directly from Image.csv files because the SQLite is too large to load
+# 
+# find../../../analysis/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/analysis/ -name Image.csv -exec csvcut -c Metadata_Well,Count_Cells {} \; > data/count.csv
+# cat <(echo Metadata_Well,Count_Cells) <(grep -v "Metadata_Well,Count_Cells" count.csv|sort) > data/cmqtlpl1.5-31-2019-mt_count.csv
+# verify that `data/cmqtlpl1.5-31-2019-mt_count.csv` looks right and then delete `data/count.csv`
 
-cell_count <- tbl(src = db, "image") %>%
-  select(TableNumber, ImageNumber, Metadata_Plate, Metadata_Well, Count_Cells) %>%
-  collect() %>%
+cell_count <-
+  read_csv("data/cmqtlpl1.5-31-2019-mt_count.csv") %>%
   group_by(Metadata_Plate, Metadata_Well) %>%
-  summarise(Count_Cells = sum(Count_Cells))
+  summarize(Count_Cells = sum(Count_Cells))
+```
 
+    ## Parsed with column specification:
+    ## cols(
+    ##   Metadata_Plate = col_character(),
+    ##   Metadata_Well = col_character(),
+    ##   Count_Cells = col_double()
+    ## )
+
+``` r
 cell_count %<>%
   inner_join(
-    profiles %>% 
-      select(matches("^Metadata_")) %>%
-      distinct(),
+    metadata,
     by = c("Metadata_Plate", "Metadata_Well")
   )
   
@@ -149,7 +175,7 @@ p <-
                       well = cell_count$Metadata_Well,
                       plate = 384) +
   
-  ggtitle("cmqtlpl1.5-31-2019-mt (dummy)") +
+  ggtitle("cmqtlpl1.5-31-2019-mt cell counts") +
   theme_dark() +
   scale_fill_continuous()
 
@@ -164,11 +190,11 @@ print(p)
 p <- 
   ggplot(cell_count, 
          aes(Metadata_line_ID, Count_Cells)) + 
-  geom_point() + 
+  geom_boxplot(aes(as.factor(Metadata_line_ID), Count_Cells)) + 
   geom_smooth(method = "lm") +
   xlab("cell line") + 
   ylab("cell count") +
-  ggtitle("Relationship between cell line id and cell count",
+  ggtitle("Relationship between cell line id and cell count (cmqtlpl1.5-31-2019-mt)",
           subtitle = sprintf("Pearson correlation = %.2f",
                              with(cell_count, cor(Count_Cells, Metadata_line_ID))
                              )
