--- a/1.profile-cell-lines/0.inspect-profiles.md
+++ b/1.profile-cell-lines/0.inspect-profiles.md
@@ -129,6 +129,7 @@ audit_detailed <- read_csv("../../../audit/2019_06_10_Batch3/cmQTL_plate1_5.31.2
     ## cols(
     ##   Metadata_Plate_Map_Name = col_character(),
     ##   Metadata_line_ID = col_double(),
+    ##   Metadata_plating_density = col_double(),
     ##   correlation = col_double()
     ## )
 
@@ -259,7 +260,7 @@ df <-
                  variables = c("Count_Cells"), 
                  strata = c("Metadata_line_ID", "Metadata_plating_density"),
                  operation = "median"),
-             by = c("Metadata_line_ID"))
+             by = c("Metadata_line_ID", "Metadata_plating_density"))
 
 p <- 
   ggplot(df,
